--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@fortawesome/fontawesome-free": "^5.11.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@stomp/ng2-stompjs": "^7.2.0",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
