Ready for Prod.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy-conf.json",
-    "build": "ng build",
+    "build": "ng build --prod",
     "postbuild": "npm run deploy",
     "predeploy": "rimraf src/main/resources/static/ && mkdirp src/main/resources/static/",
     "deploy": "cp -r dist/fgc/* src/main/resources/static/",
