--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	compileOnly 'org.projectlombok:lombok'
+  runtimeOnly group: 'org.postgresql', name: 'postgresql'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
