--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-logging.level.com.craftmaster.lds.fgc=DEBUG
+# logging.level.com.craftmaster.lds.fgc=DEBUG
+logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats = ERROR
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
