--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@ng-bootstrap/ng-bootstrap": "5.2.2",
     "@stomp/ng2-stompjs": "7.2.0",
     "bootstrap": "4.4.1",
+    "deep-equal": "^2.0.1",
     "jquery": "3.4.1",
     "moment": "^2.24.0",
     "popper.js": "1.16.1",
     "rxjs": "6.5.4",
     "tslib": "1.10.0",
+    "vibrant": "^0.0.1",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
