--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "private": true,
   "engines": {
-    "node": ">10.16.x",
-    "npm": ">6.9.x"
+    "node": ">10.16.0",
+    "npm": ">6.9.0"
   },
   "dependencies": {
     "@angular/animations": "9.0.0",
