upgraded the libs, fix yarn on your own

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fgc",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy-conf.json",
@@ -18,36 +18,36 @@
     "npm": ">6.9.0"
   },
   "dependencies": {
-    "@angular/animations": "9.0.0",
-    "@angular/common": "9.0.0",
-    "@angular/compiler": "9.0.0",
-    "@angular/core": "9.0.0",
-    "@angular/forms": "9.0.0",
-    "@angular/localize": "^9.0.0",
-    "@angular/platform-browser": "9.0.0",
-    "@angular/platform-browser-dynamic": "9.0.0",
-    "@angular/router": "9.0.0",
+    "@angular/animations": "9.0.2",
+    "@angular/common": "9.0.2",
+    "@angular/compiler": "9.0.2",
+    "@angular/core": "9.0.2",
+    "@angular/forms": "9.0.2",
+    "@angular/localize": "9.0.2",
+    "@angular/platform-browser": "9.0.2",
+    "@angular/platform-browser-dynamic": "9.0.2",
+    "@angular/router": "9.0.2",
     "@fortawesome/fontawesome-free": "5.12.1",
-    "@ng-bootstrap/ng-bootstrap": "5.2.2",
+    "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@stomp/ng2-stompjs": "7.2.0",
     "bootstrap": "4.4.1",
-    "deep-equal": "^2.0.1",
+    "deep-equal": "2.0.1",
     "jquery": "3.4.1",
-    "moment": "^2.24.0",
+    "moment": "2.24.0",
     "popper.js": "1.16.1",
     "rxjs": "6.5.4",
-    "tslib": "1.10.0",
-    "vibrant": "^0.0.1",
+    "tslib": "1.11.0",
+    "vibrant": "0.0.1",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.1",
-    "@angular/cli": "9.0.1",
-    "@angular/compiler-cli": "9.0.0",
-    "@angular/language-service": "9.0.0",
-    "@types/jasmine": "3.5.3",
+    "@angular-devkit/build-angular": "0.900.3",
+    "@angular/cli": "9.0.3",
+    "@angular/compiler-cli": "9.0.2",
+    "@angular/language-service": "9.0.2",
+    "@types/jasmine": "3.5.7",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "13.7.1",
+    "@types/node": "13.7.5",
     "@types/ramda": "github:types/npm-ramda",
     "codelyzer": "5.2.1",
     "copyfiles": "2.2.0",
@@ -63,6 +63,6 @@
     "rimraf": "3.0.2",
     "ts-node": "8.6.2",
     "tslint": "6.0.0",
-    "typescript": "3.7.5"
+    "typescript": "3.8.2"
   }
 }
