--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,35 +15,37 @@ jobs:
 
   build:
     name: Test and Build
-    runs-on: ubuntu-latest
+    runs-on: macos-10.15
     timeout-minutes: 20
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup Node using nvm
-        uses: dcodeIO/setup-node-nvm@v2.0.0
+
+      - name: Setup NVM and Node
+        run: |
+          curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.35.2/install.sh | bash
+          export NVM_DIR=$HOME/.nvm
+          source $NVM_DIR/nvm.sh
+          nvm install
+          echo '[ -s "$HOME/.bashrc" ] && \. "$HOME/.bashrc"' >> $HOME/.bash_profile
+          node --version
+
+      - name: Setup Yarn
+        run: curl -o- -L https://yarnpkg.com/install.sh | bash
 
       - name: Yarn Install
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
+        run: yarn install
       - name: Yarn Test
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: test-ci
+        run: yarn test-ci
       - name: Yarn Build
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: build
+        run: yarn build
       - name: Yarn Deploy
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: deploy
+        run: yarn deploy
 
       - name: Setup Java
-        uses: olafurpg/setup-scala@v6
+        uses: actions/setup-java@v1
         with:
-          java-version: adopt@1.13
+          java-version: "13"
 
       - name: Gradle Compile
         run: ./gradlew clean classes testClasses
@@ -57,10 +59,13 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v1
         with:
-          name: Jar File
-          path: build/libs/fgc-1.0.jar
+          name: Build Files
+          path: build/libs/
 
-      - name: Configure AWS credentials
+      - name: Setup AWS CLI
+        uses: chrislennon/action-aws-cli@v1.1
+
+      - name: Setup AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -68,7 +73,7 @@ jobs:
           aws-region: us-east-2
 
       - name: Upload Versioned Artifacts to S3
-        run: aws s3 sync build/libs/fgc-*.jar s3://fantasygc/deploy/
+        run: aws s3 sync build/libs/ s3://fantasygc/deploy/
 
       - name: Upload Latest Artifacts to S3
-        run: aws s3 sync build/libs/fgc-*.jar s3://fantasygc/deploy/fgc-latest.jar
+        run: aws s3 cp build/libs/fgc-*.jar s3://fantasygc/deploy/fgc-latest.jar
