more tests passing

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@types/ramda": "github:types/npm-ramda",
     "codelyzer": "5.2.1",
     "copyfiles": "2.2.0",
-    "husky": "^4.2.3",
+    "husky": "4.2.3",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.4.1",
@@ -67,11 +67,11 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.2",
-    "karma-spec-reporter": "^0.0.32",
+    "karma-spec-reporter": "0.0.32",
     "mkdirp": "1.0.3",
-    "prettier": "^1.19.1",
+    "prettier": "1.19.1",
     "protractor": "5.4.3",
-    "puppeteer": "^2.1.1",
+    "puppeteer": "2.1.1",
     "rimraf": "3.0.2",
     "ts-node": "8.6.2",
     "tslint": "6.0.0",
