Introducing new Login Scheme.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "popper.js": "1.16.1",
     "rxjs": "6.5.4",
     "tslib": "1.11.0",
+    "uuid": "7.0.1",
     "vibrant": "0.0.1",
     "zone.js": "0.10.2"
   },
