--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=ERROR
 logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.session.store-type=jdbc
