Implemented new Login. Still need update username and family and logout. Then I'll add switch user.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# logging.level.com.craftmaster.lds.fgc=DEBUG
+logging.level.com.craftmaster.lds.fgc=DEBUG
 logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=ERROR
 logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
