Work in progress. Moving questions, answers and sccores from HTTP to WS.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=
 logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.session.store-type=jdbc
+
+#spring.jpa.hibernate.ddl-auto=create
