--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,14 @@ logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandl
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.session.store-type=jdbc
 
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/fgc
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
 #spring.jpa.hibernate.ddl-auto=create
+
+
