--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.session.store-type=jdbc
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/fgc
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/fgc
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
 #spring.jpa.hibernate.ddl-auto=create
 
