Chats are now stateless and messenging relies on the DB to keep all connected clients to all connected servers in sync.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,11 @@ spring.session.store-type=jdbc
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/fgc
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+fgc.db.driver=com.impossibl.postgres.jdbc.PGDriver
+fgc.db.url=jdbc:pgsql://localhost:5432/fgc
+fgc.db.username=postgres
+fgc.db.password=postgres
 
 #spring.jpa.hibernate.ddl-auto=create
 
