--- a/build.gradle
+++ b/build.gradle
@@ -32,13 +32,14 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.springframework.boot:spring-boot-starter-aop"
 	implementation "org.springframework.session:spring-session-jdbc"
-	compileOnly 'org.projectlombok:lombok'
-  	runtimeOnly group: 'org.postgresql', name: 'postgresql'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  // runtimeOnly 'com.h2database:h2'
+  // runtimeOnly group: 'org.postgresql', name: 'postgresql'
+  implementation "com.impossibl.pgjdbc-ng:pgjdbc-ng:0.8.3"
+  compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile 'com.github.ben-manes.caffeine:caffeine:2.8.0'
   compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.3.0-rc1'
   compile 'com.google.googlejavaformat:google-java-format:1.7'
