--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@stomp/ng2-stompjs": "7.2.0",
     "bootstrap": "4.4.1",
     "deep-equal": "2.0.1",
+    "image-resize": "^1.1.5",
     "jquery": "3.4.1",
     "moment": "2.24.0",
     "popper.js": "1.16.1",
