--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@stomp/ng2-stompjs": "7.2.0",
     "bootstrap": "4.4.1",
+    "cropperjs": "^1.5.6",
     "deep-equal": "2.0.1",
     "image-resize": "^1.1.5",
     "jquery": "3.4.1",
