--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@stomp/ng2-stompjs": "7.2.0",
     "bootstrap": "4.4.1",
+    "browser-image-resizer": "^2.1.0",
     "cropperjs": "^1.5.6",
     "deep-equal": "2.0.1",
-    "image-resize": "^1.1.5",
     "jquery": "3.4.1",
     "moment": "2.24.0",
     "popper.js": "1.16.1",
