Cleaning up code, getting husky working and shortned first name to 2 chars
upgraded libraries in nod... yarn ;)
updated readme for new dir structures
trying to fix husky/gradle
set first name required to 2 chars, cleaned up dead code and added some tests
trying to get gradle to run in husky, we had to add a package.json specific for it

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -50,7 +50,7 @@ apply plugin: 'eclipse'
 eclipse {
     project {
     // this is the name of the parent dir
-        name = 'repo'
+        name = 'server'
     }
 }
 
