--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,6 @@
     "test": "ng test",
     "test-ci": "ng test --watch=false --browsers=ChromeHeadless"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn clean && yarn format && ./gradlew clean spotlessJavaApply"
-    }
-  },
   "private": true,
   "engines": {
     "node": ">10.16.0",
@@ -39,8 +34,8 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@stomp/ng2-stompjs": "7.2.0",
     "bootstrap": "4.4.1",
-    "browser-image-resizer": "^2.1.0",
-    "cropperjs": "^1.5.6",
+    "browser-image-resizer": "2.1.0",
+    "cropperjs": "1.5.6",
     "deep-equal": "2.0.1",
     "jquery": "3.4.1",
     "moment": "2.24.0",
@@ -62,7 +57,7 @@
     "@types/ramda": "github:types/npm-ramda",
     "codelyzer": "5.2.1",
     "copyfiles": "2.2.0",
-    "husky": "4.2.3",
+    "cross-env": "7.0.2",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.4.1",
@@ -77,7 +72,7 @@
     "puppeteer": "2.1.1",
     "rimraf": "3.0.2",
     "ts-node": "8.6.2",
-    "tslint": "6.0.0",
+    "tslint": "5.20.1",
     "typescript": "3.7.5"
   }
 }
