--- a/client/angular.json
+++ b/client/angular.json
@@ -75,7 +75,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "fgc:build",
-            "proxyConfig": "proxy.conf.json",
+            "proxyConfig": "proxy-conf.json",
             "host": "0.0.0.0"
           },
           "configurations": {
