Added Sentry.io fixed #43

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Yarn Test
         run: yarn --cwd client test-ci
 
+      - name: Setup Sentry
+        run: sed -i '' "s|XXX_SENTRY_DSN_XXX|${SENTRY_DSN}|" client/src/index.html
+
       - name: Yarn Build
         run: yarn --cwd client build
 
