--- a/server/build.gradle
+++ b/server/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     flyway 'org.postgresql:postgresql:42.2.11.jre7'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile 'io.sentry:sentry-spring:1.7.30'
 }
 // to postgre dump a schema
 // pg_dump -O -T fgc.flyway_schema_history -U postgres fgc > V1__Base_version.sql
