--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 logging.level.com.craftmaster.lds.fgc=DEBUG
 logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=ERROR
-logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
+#logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
+
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.session.store-type=jdbc
 
@@ -16,4 +17,4 @@ fgc.db.password=postgres
 
 #spring.jpa.hibernate.ddl-auto=create
 
-
+stacktrace.app.packages=com.craftmaster.lds.fgc
