--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "9.0.6",
     "@fortawesome/fontawesome-free": "5.12.1",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@sentry/browser": "5.14.2",
     "@stomp/ng2-stompjs": "7.2.0",
     "bootstrap": "4.4.1",
     "browser-image-resizer": "2.1.0",
