--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
     id 'org.flywaydb.flyway' version '6.3.0'
+    id 'org.owasp.dependencycheck' version '5.3.1'
     id 'org.springframework.boot' version '2.1.8.RELEASE'
 }
 
@@ -37,6 +38,7 @@ dependencies {
     implementation 'com.google.googlejavaformat:google-java-format:1.7'
     implementation 'com.impossibl.pgjdbc-ng:pgjdbc-ng:0.8.3'
     implementation 'io.sentry:sentry-spring:1.7.30'
+    implementation 'org.owasp:dependency-check-gradle:5.3.1'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
@@ -75,4 +77,12 @@ spotless {
     java {
         googleJavaFormat()
     }
+}
+
+apply plugin: 'org.owasp.dependencycheck'
+check.dependsOn dependencyCheckAnalyze
+dependencyCheck {
+    autoUpdate=false
+    cveValidForHours=1
+    format='ALL'
 }
