Testing master only deploy.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
       - name: Setup Java
         uses: actions/setup-java@v1
         with:
@@ -101,10 +104,10 @@ jobs:
           aws-region: us-east-2
 
       - name: Upload Versioned Artifacts to S3
-        run: aws s3 sync server/build/libs/ s3://fantasygc/deploy/
+        run: [[ `git rev-parse --abbrev-ref HEAD` = 'master' ]] && aws s3 sync server/build/libs/ s3://fantasygc/deploy/
 
       - name: Upload Latest Artifacts to S3
-        run: aws s3 cp server/build/libs/fgc-*.jar s3://fantasygc/deploy/fgc-latest.jar
+        run: [[ `git rev-parse --abbrev-ref HEAD` = 'master' ]] && aws s3 cp server/build/libs/fgc-*.jar s3://fantasygc/deploy/fgc-latest.jar
 #on:
 #  push:
 #    branches:
