--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "moment": "2.24.0",
     "popper.js": "1.16.1",
     "rxjs": "6.5.4",
+    "sockjs-client": "1.4.0",
     "tslib": "1.11.1",
     "uuid": "7.0.2",
     "vibrant": "0.0.1",
