--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,6 +5,7 @@ logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.session.store-type=jdbc
 
+spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
