--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,6 +25,14 @@ jobs:
         with:
           java-version: "13"
 
+      - name: Cache CVE Data
+        uses: actions/cache@v1
+        env:
+          cache-name: cve
+        with:
+          path: ~/.gradle/dependency-check-data/
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('server/build.gradle') }}
+
       - name: Gradle Dependency Check Analyze
         working-directory: ./server
         run: ./gradlew dependencyCheckAnalyze
@@ -43,6 +51,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Cache NVM
+        uses: actions/cache@v1
+        env:
+          cache-name: nvm
+        with:
+          path: ~/.nvm
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('.nvmrc') }}
+
       - name: Setup NVM and Node
         run: |
           curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.35.2/install.sh | bash
@@ -54,6 +70,14 @@ jobs:
 
       - name: Setup Yarn
         run: curl -o- -L https://yarnpkg.com/install.sh | bash
+
+      - name: Cache NVM
+        uses: actions/cache@v1
+        env:
+          cache-name: node-modules
+        with:
+          path: .node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('client/package.json') }}
 
       - name: Yarn Install
         run: yarn --cwd client install
@@ -74,6 +98,14 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: "13"
+
+      - name: Cache Gradle
+        uses: actions/cache@v1
+        env:
+          cache-name: gradle
+        with:
+          path: ~/.gradle
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/*.gradle*') }}
 
       - name: Gradle Compile
         working-directory: ./server
