--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,6 +25,14 @@ jobs:
         with:
           java-version: "13"
 
+      - name: Cache Gradle
+        uses: actions/cache@v1
+        env:
+          cache-name: gradle-cache
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/*.gradle*') }}
+
       - name: Cache CVE Data
         uses: actions/cache@v1
         env:
@@ -75,13 +83,15 @@ jobs:
       - name: Setup Yarn
         run: curl -o- -L https://yarnpkg.com/install.sh | bash
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
       - name: Cache Node Modules
         uses: actions/cache@v1
-        env:
-          cache-name: node_modules
         with:
-          path: client/node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('client/package.json') }}
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
 
       - name: Yarn Install
         run: yarn --cwd client install
@@ -106,9 +116,9 @@ jobs:
       - name: Cache Gradle
         uses: actions/cache@v1
         env:
-          cache-name: gradle
+          cache-name: gradle-cache
         with:
-          path: ~/.gradle
+          path: ~/.gradle/caches
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/*.gradle*') }}
 
       - name: Gradle Compile
