--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: macos-10.15
     timeout-minutes: 20
     steps:
+      - run: echo ${{ github.ref }}
+
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -85,6 +87,8 @@ jobs:
         with:
           name: Build Files
           path: server/build/libs/
+
+      - run: echo ${{ github.ref }}
 
       - name: Setup AWS CLI
         uses: chrislennon/action-aws-cli@v1.1
