--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "format": "prettier --write \"client/src/**/*.{ts,js,json,html,css,scss}\""
+    "format": "prettier --write \"client/src/**/*.{ts,js,json,html,css,scss}\"",
+    "spellcheck": "cspell \"client/src/**/*.{ts,js,json,html,scss}\" \"server/src/**/*.{ts,js,json,html,scss}\" || exit 0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn --cwd client format && cd server; ./gradlew spotlessJavaApply"
+      "commit-msg": "cspell $HUSKY_GIT_PARAMS || exit 0",
+      "pre-commit": "yarn --cwd client format && cd server; ./gradlew spotlessJavaApply && yarn spellcheck"
     }
   },
   "devDependencies": {
+    "cspell": "^4.0.55",
     "husky": "4.2.3",
     "prettier": "1.19.1"
   }
