--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "browser-image-resizer": "2.1.0",
     "cropperjs": "1.5.6",
     "deep-equal": "2.0.1",
+    "is-ua-webview": "1.0.1",
     "jquery": "3.4.1",
     "moment": "2.24.0",
     "popper.js": "1.16.1",
